--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Eclipse shit
 .project
 .settings
+.classpath
 
 # Package Files #
 *.jar
@@ -19,3 +20,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
